add client template for auth service
